# xmodem

./: .coveralls.yml  .drone.yml  .editorconfig  .gitignore  .hgignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements-docs.txt  setup.py  tox.ini  xmodem.py
.github/workflows/: ci.yml
doc/: Makefile  XMODEM.TXT  XMODEM1K.TXT  XMODMCRC.TXT  make.bat  ymodem.txt
doc/source/: conf.py  index.rst  xmodem.rst
test/: test-recv.py  test-send.py  test.py
test/functional/: accessories.py  test-recv.py  test-send.py  test.py  test_failures.py  test_xmodem.py  test_xmodem_using_lrzsz.py
test/unit/: test_xmodem.py
typ_test/: receive_terminal.py  send_terminal.py
typ_test/xmodem/: __init__.py
xmodem/: __init__.py  __main__.py
